--- a/index.html
+++ b/index.html
@@ -38,15 +38,17 @@
       </div>
 
       <!--Imagen de portada-->
-      <div class="row container">
-        <div class="col s12">
-          <img src="img/tourism.jpg" alt="tourism"/ style="margin-top:15px; width:100%;">
+      <div class="card-panel grey lighten-5 z-depth-1">
+        <div class="row container">
+          <div class="col s12">
+            <img src="img/tourism.jpg" alt="tourism"/ style="margin-top:15px; width:100%;">
+          </div>
         </div>
-      </div>
 
-      <div class="row container">
-        <div class="col s12">
-          <p class="text-center" style="text-align:center;font-style:italic;font-size:20px;">-Larga vida al turismo-</p>
+        <div class="row container">
+          <div class="col s12">
+            <p class="text-center" style="text-align:center;font-style:italic;font-size:20px;">-Larga vida al turismo-</p>
+          </div>
         </div>
       </div>
 
@@ -62,34 +64,103 @@
           <a href="#"><ion-icon class="icon-color"  size="large"  name="logo-tumblr"></ion-icon></a>
           <a href="#"><ion-icon class="icon-color"  size="large"  name="logo-youtube"></ion-icon></a>
         </div>
-        <div class="col s12 m12 l4">
-          <div class="row">
-            <img src="img/t2.jpg"/ style="width:100%;">
+
+        <div class="card-panel grey lighten-5 z-depth-1">
+          <div class="col s12 m12 l3">
+            <div class="row">
+              <img src="img/t2.jpg"/ style="width:100%;">
+            </div>
+            <div class="row">
+              <img src="img/t1.jpg"/ style="width:100%;">
+            </div>
           </div>
-          <div class="row">
-            <img src="img/t1.jpg"/ style="width:100%;">
+
+          <div class="col s12 m12 l3">
+            <img src="img/t6.jpg"/ style="width:100%;">
+          </div>
+
+          <div class="col s12 m12 l5">
+            <div class="row">
+              <img src="img/t3.jpg"/ style="width:100%;">
+            </div>
+            <div class="row">
+              <img src="img/t4.jpg"/ style="width:100%;">
+            </div>
           </div>
         </div>
-        <div class="col s12 m12 l4">
-          <img src="img/t6.jpg"/ style="width:100%;">
-        </div>
-        <div class="col s12 m12 l3">
-          <div class="row">
-            <img src="img/t3.jpg"/ style="width:100%;">
-          </div>
-          <div class="row">
-            <img src="img/t4.jpg"/ style="width:100%;">
-          </div>
-        </div>
+
       </div>
-      <div class="row">
-        <div class="col s12 m12 l9">
+
+      <div class="row center">
+        <div class="col s12 m12 l8">
+          <div class="card-panel grey lighten-5 z-depth-1">
           <img src="img/aquarium.jpg" alt="acuario"/ style="width:100%;">
           <p>Los acuarios públicos o aquarium (en su original latino), son instalaciones abiertas al público para ver especies acuáticas en acuarios. La mayor parte de los acuarios públicos presentan una determinada cantidad de tanques más pequeños, así como uno o más depósitos mayores. Los depósitos más grandes tienen una capacidad de varios millones de litros de agua y pueden albergar especies grandes, incluyendo delfines, tiburones o ballenas. Los animales semiacuáticos (nutrias, pingüinos, etc.) pueden ser albergados también por acuarios públicos.
 
             Desde el punto de vista operacional, un acuario público es similar en muchos aspectos a un zoológico o museo. Un buen acuario tendrá exposiciones especiales para atraer a los visitantes, además de su colección permanente. Unos cuantos tienen su propia versión de “zoo para tocar”; por ejemplo, el Monterey Bay Aquarium, en California, tiene un depósito superficial lleno de tipos comunes de rayas, y el público puede “tocar” sus pieles coriáceas cuando pasan.</p>
         </div>
-        <div class="col s12 m12 l3">perfil autor</div>
+      </div>
+
+
+
+        <div class="col s12 m12 l4">
+          <div class="card-panel grey lighten-5 z-depth-1">
+            <img src="img/autor.jpg" alt="Autor" class="circle responsive-img" style="width:50%;">
+
+
+              <h4>Sobre el autor</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus facilisis nulla sed mi imperdiet facilisis. Sed at ornare augue. In id lacus ut elit mattis aliquet. Sed est lectus, interdum nec ante id, semper condimentum sapien. Aliquam erat volutpat. Donec auctor suscipit porttitor. Fusce quis leo in lacus rhoncus consequat. Nam lacinia ligula urna, vel placerat nulla ullamcorper sed. Phasellus dictum, nunc sed semper feugiat, dolor nibh imperdiet dolor, sit amet semper velit ex in lectus.
+
+              Nullam mattis maximus augue, at finibus odio lacinia id. Etiam et consectetur erat. Nunc eu turpis ac libero tempus eleifend. Maecenas sem magna, commodo vitae massa id, laoreet laoreet risus. Vivamus non purus condimentum justo tempus interdum. Donec nec feugiat leo. Phasellus sit amet nisi vulputate, suscipit lacus eget, fringilla eros. Duis nisi tellus, vulputate sed rutrum ac, feugiat in dui. Praesent aliquam pretium augue, at dignissim risus scelerisque a. Morbi id risus sit amet erat rhoncus pretium. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
+
+              Donec et libero turpis. Pellentesque diam purus, pretium nec tempus nec, suscipit vel velit. Suspendisse in dictum enim. Fusce tempus fringilla leo vel ultricies. Pellentesque blandit metus non enim aliquet luctus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nunc fringilla est in fringilla facilisis. Pellentesque vestibulum tincidunt eros sed tempus. Nullam nec dapibus erat, in malesuada metus. Ut a metus non lorem dignissim consectetur. Aliquam sollicitudin faucibus enim ac placerat. Maecenas diam lorem, condimentum sed ipsum ut, lacinia dictum felis. Aliquam eget libero a ipsum lobortis blandit sit amet ac tortor. Maecenas arcu felis, mollis sit amet turpis ac, venenatis varius dolor.</p>
+
+          </div>
+        </div>
+
+        <!--Comentarios-->
+
+          <div class ="col s12 m12 l8">
+            <div class="card-panel grey lighten-5 z-depth-1">
+
+              <div class="row">
+                <h4>Comentarios</h4>
+                <div class="input-field col s11">
+                  <input placeholder="Nombre" id="first_name" type="text">
+                  <label for="first_name">Nombre</label>
+                </div>
+                <div class="col s1">
+                  <i class="material-icons right icon-color2">contacts</i>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="input-field col s11">
+                  <input placeholder="Correo electrónico" id="correo" type="email">
+                  <label for="email">Email</label>
+                </div>
+                <div class="col s1">
+                  <i class="material-icons right icon-color2">email</i>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="input-field col s11">
+                  <textarea id="textarea1" class="materialize-textarea" rows="10"></textarea>
+                  <label for="textarea1">Deje su comentario</label>
+                </div>
+                <div class="col s1">
+                  <i class="material-icons right icon-color2">question_answer</i>
+                </div>
+              </div>
+
+              <div class="row">
+                <a class="waves-effect waves-light btn">Enviar</a>
+              </div>
+
+            </div>
+          </div>
+
       </div>
 
 
