--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <title>Turismo tico</title>
     </head>
 
-    <body>
+    <body class="center-align">
 
       <!--Navegación-->
       <div class="row container">
