--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
           </div>
         </div>
-      </div>
+
 
       <!--Imagen de portada-->
       <div class="card-panel grey lighten-5 z-depth-1">
@@ -95,6 +95,7 @@
         <div class="col s12 m12 l8">
           <div class="card-panel grey lighten-5 z-depth-1">
           <img src="img/aquarium.jpg" alt="acuario"/ style="width:100%;">
+          <h4>Acuarios</h4>
           <p>Los acuarios públicos o aquarium (en su original latino), son instalaciones abiertas al público para ver especies acuáticas en acuarios. La mayor parte de los acuarios públicos presentan una determinada cantidad de tanques más pequeños, así como uno o más depósitos mayores. Los depósitos más grandes tienen una capacidad de varios millones de litros de agua y pueden albergar especies grandes, incluyendo delfines, tiburones o ballenas. Los animales semiacuáticos (nutrias, pingüinos, etc.) pueden ser albergados también por acuarios públicos.
 
             Desde el punto de vista operacional, un acuario público es similar en muchos aspectos a un zoológico o museo. Un buen acuario tendrá exposiciones especiales para atraer a los visitantes, además de su colección permanente. Unos cuantos tienen su propia versión de “zoo para tocar”; por ejemplo, el Monterey Bay Aquarium, en California, tiene un depósito superficial lleno de tipos comunes de rayas, y el público puede “tocar” sus pieles coriáceas cuando pasan.</p>
@@ -162,7 +163,7 @@
           </div>
 
       </div>
-
+    </div>
 
 
 
